--- a/FinalProject/Docs/TSProject.tex
+++ b/FinalProject/Docs/TSProject.tex
@@ -42,30 +42,30 @@
 	
 	A chatbot is program which simulates an human conversation with a final user, in the new times, those chatbots are equipped with artificial intelligence, which offers a better conversation, to answer questions, solve problems, give recommendations, etc. In our context, a chatbot allow to offer up a help in project management in all parts of a project.
 	
-	With external information, our chatbot can be entrenaited to give tips to better planning, organizing, leading, controlling resources, making more efficiently and effectively the solution.
+	With external information, our chatbot can be entrained to give tips for better planning, organizing, leading, controlling resources, making more efficiently and effectively the solution.
 	
-	\section{Method and  materials}
-	Before you begin to format your paper, first write and save the content as a 
-	separate text file. Complete all content and organizational editing before 
-	formatting. Please note sections \ref{AA}--\ref{SCM} below for more information on 
-	proofreading, spelling and grammar.
+	\section{System Analisys}
+	To understand the construction of a chatbot, we need to understand the behavior from of system point of view.\\
 	
-	Keep your text and graphic files separate until after the text has been 
-	formatted and styled. Do not number text heads---{\LaTeX} will do that 
-	for you.
+	1. Split parts is basic for an application development (\textbf{Holistic approach}), so we need layers to achieve our goal, we need, frontend, the layer for user interface, backend, all the logic with the brain of chatbot (LlaMa 3), API layer, basically, communication between backend and frontend, and a storage for persistence. \\
+	
+	Relations between all those parts can see the synergy of application.\\
+	
+	2. Chaos theory is important to get a better behavior of app, in a perfect world, our chatbot will have perfect performance, but in real world, we have to consider some things:\\
+	
+		A. Many users, at same time, is going to cause overload, equals, slow responses.\\
+		
+		B. Hardware limitation: Low capacity to handle user, can be a problem for the app.\\
+		
+		C. IA: Is a powerful tool, but, is artificial, that can causes mistakes, inaccuracies, etc, so feedback is useful to improve better sensibility. \\
+		
+	
+	3. 
 	
 	
 	\begin{thebibliography}{00}
-		\bibitem{b1} G. Eason, B. Noble, and I. N. Sneddon, ``On certain integrals of Lipschitz-Hankel type involving products of Bessel functions,'' Phil. Trans. Roy. Soc. London, vol. A247, pp. 529--551, April 1955.
-		\bibitem{b2} J. Clerk Maxwell, A Treatise on Electricity and Magnetism, 3rd ed., vol. 2. Oxford: Clarendon, 1892, pp.68--73.
-		\bibitem{b3} I. S. Jacobs and C. P. Bean, ``Fine particles, thin films and exchange anisotropy,'' in Magnetism, vol. III, G. T. Rado and H. Suhl, Eds. New York: Academic, 1963, pp. 271--350.
-		\bibitem{b4} K. Elissa, ``Title of paper if known,'' unpublished.
-		\bibitem{b5} R. Nicole, ``Title of paper with only first word capitalized,'' J. Name Stand. Abbrev., in press.
-		\bibitem{b6} Y. Yorozu, M. Hirano, K. Oka, and Y. Tagawa, ``Electron spectroscopy studies on magneto-optical media and plastic substrate interface,'' IEEE Transl. J. Magn. Japan, vol. 2, pp. 740--741, August 1987 [Digests 9th Annual Conf. Magnetics Japan, p. 301, 1982].
-		\bibitem{b7} M. Young, The Technical Writer's Handbook. Mill Valley, CA: University Science, 1989.
+		\bibitem{b1} 
 	\end{thebibliography}
-	\vspace{12pt}
-	\color{red}
-	IEEE conference templates contain guidance text for composing and formatting conference papers. Please ensure that all template text is removed from your conference paper prior to submission to the conference. Failure to remove the template text from your paper may result in your paper not being published.
+	
 	
 \end{document}
